# cpp_course

./: README.md
lab1_my_vector/: CMakeLists.txt  README.md  massif.out.151043
lab1_my_vector/inc/: test.h
lab1_my_vector/inc/exceptions/: out_of_bound_exeption.h
lab1_my_vector/lib/my_vector/: CMakeLists.txt  my_vector.cpp  my_vector.hpp  my_vector_realization.hpp  node.cpp  node.hpp
lab1_my_vector/src/: main.cpp  test.cpp
lab1_ratio/: CMakeLists.txt
lab1_ratio/inc/: ratio_algorithm.h  tests.h
lab1_ratio/lib_ratio/: CMakeLists.txt  lib_ratio.cpp  lib_ratio.hpp
lab1_ratio/src/: main.cpp  ratio_algorithm.cpp  tests.cpp
lab2_my_vector/: README.md
my_ratio/: CMakeLists.txt
my_vector/: CMakeLists.txt
