cmake_minimum_required(VERSION 3.17)

set(PROJECT_NAME lib_ratio)
project(${PROJECT_NAME} CXX)

set(CMAKE_CXX_STANDARD 20)

add_library(${PROJECT_NAME} SHARED ${CMAKE_CURRENT_SOURCE_DIR}/lib_ratio.cpp ${CMAKE_CURRENT_SOURCE_DIR}/lib_ratio.hpp)
set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)